# cpp_project_profile

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  CMakeLists.txt  LICENSE  build.sh  main.cpp  readme.md
scripts/: flamegraph.sh  gcov_coverage.sh  gprof_analyze.sh  perf_analyze.sh  valgrind_analyze.sh
